# PromptKit_v2

./: .gitignore  CHANGELOG.md  CHILL_LOOP_CANVAS.md  INSTRUCTIONS_FUTURE_ME.md  Makefile  README.md  manifest_TaskList.md  pyproject.toml
.codex/: config.toml
.gemini/: GEMINI.md
.github/: copilot-instructions.md
.github/workflows/: sync_constitution.yml
.prompts/: instructions.md
benchmarks/: test_hotpaths.py
promptkit/: AGENTS.md
promptkit/skills/devops/: SKILL_DevOps_Guide.md
promptkit/skills/governance/: SKILL_GitBoard.md
promptkit/skills/performance/: SKILL_Profiling.md  profile.py
scripts/: sync_agents.py
